--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "jest --colors",
+    "test:watch": "jest --watch --colors",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
@@ -26,6 +26,7 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^7.5.1",
+    "dotenv": "^8.2.0",
     "mongodb": "^3.6.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -35,8 +36,10 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.6.15",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
+    "@types/mongodb": "^3.6.12",
     "@types/node": "^14.14.6",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
